# msgpack-c-issue-1025-example

./: CMakeLists.txt  README.md  main.cpp
cmake/: FetchContent_Declare_msgpack.cmake
